<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moviesView"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.plaltair.tvseriesandmoviesdiary.Movies"
    tools:showIn="@layout/activity_movies">

    <ListView
        android:id="@+id/listViewMovies"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>

    <TextView
        android:id="@+id/emptyListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/noMovies"
        android:textColor="#000000"
        android:textStyle="bold"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/secondView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/rounded_corners"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/chooseATitle"
            android:textColor="#000000"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:hint="@string/emptyTitle"
            android:textColor="#000000" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="#00FFFFFF"
            android:text="@string/create"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@id/button"
            android:layout_toStartOf="@id/button"
            android:background="#00FFFFFF"
            android:text="@string/back"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/thirdView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:visibility="gone">

        <Button
            android:id="@+id/move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_3"
            android:text="@string/move"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/defaultImage"
            android:id="@+id/defaultImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/move"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:text="@string/changeImge"
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/move"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:text="@string/deleteImage"
            android:id="@+id/deleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/move"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:id="@+id/changeTag"
            android:text="@string/changeTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/button4"/>

        <Button
            android:id="@+id/deleteTag"
            android:text="@string/deleteTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/button4"/>

        <Button
            android:id="@+id/addNote"
            android:text="@string/addNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/changeTag"/>

        <Button
            android:text="@string/delete"
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/addNote"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:id="@+id/cancel"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button5"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settingsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/titleSettings"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

        </Spinner>

        <EditText
            android:id="@+id/editTextSettings"
            android:hint="@string/emptyNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/colorPrimary"
            android:background="#00FFFFFF"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/colorPrimary"
            android:background="#00FFFFFF"
            android:layout_toLeftOf="@id/buttonConfirm"
            android:layout_toStartOf="@id/buttonConfirm"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</RelativeLayout>
