<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab1View"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.plaltair.tvseriesandmoviesdiary.Main">

    <ListView
        android:id="@+id/listViewTab1"
        android:longClickable="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:listSelector="@android:color/transparent">
    </ListView>

    <RelativeLayout
        android:id="@+id/secondView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:padding="10dp"
        android:visibility="gone">

        <Button
            android:text="@string/defaultImage"
            android:id="@+id/defaultImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:text="@string/changeImge"
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:text="@string/deleteImage"
            android:id="@+id/deleteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:text="@string/delete"
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:background="@drawable/button_background_3"/>

        <Button
            android:id="@+id/cancel"
            android:text="@string/back"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button2"/>

    </RelativeLayout>

</RelativeLayout>